# zircon

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.claude/: settings.local.json
.github/workflows/: build.yml
runner/: CMakeLists.txt  zi_entry_point.c
runtime/: CMakeLists.txt  zi_app.c  zi_app.h  zi_common.h  zi_core.c  zi_core.h  zi_graphics.c  zi_graphics.h  zi_graphics_vulkan.c  zi_graphics_webgpu.c  zi_log.c  zi_log.h  zi_math.h  zi_platform.h  zi_platform_emscripten.c  zi_platform_glfw.c  zi_platform_unix.c  zi_platform_win32.c
test/: CMakeLists.txt  test_core.c  test_entry_point.c  test_math.c
